--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
 
 [dependencies]
 bitflags = "1.0"
+libc = "0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
