--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ libc = "0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser", "rpc", "rpcdce", "libloaderapi"] }
