--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "appframe"
 version = "0.1.0"
 authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
 
+[features]
+with_ferrite = ["ferrite"]
+
 [dependencies]
 bitflags = "1.0"
 libc = "0.2"
+ferrite = { git = "https://github.com/Pctg-x8/ferrite", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
