--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "appframe"
 version = "0.1.0"
 authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
+build = "build.rs"
 
 [features]
 with_ferrite = ["ferrite"]
@@ -9,7 +10,7 @@ with_ferrite = ["ferrite"]
 [dependencies]
 bitflags = "1.0"
 libc = "0.2"
-ferrite = { git = "https://github.com/Pctg-x8/ferrite", optional = true, features = ["FeImplements", "FePresentation"] }
+ferrite = { path="../ferrite", optional = true, features = ["FeImplements", "FePresentation"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
