--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ with_ferrite = ["ferrite"]
 [dependencies]
 bitflags = "1.0"
 libc = "0.2"
-ferrite = { path="../ferrite", optional = true, features = ["FeImplements", "FePresentation"] }
+ferrite = { git = "https://github.com/Pctg-x8/ferrite", optional = true, features = ["FeImplements", "FePresentation"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
