--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ objc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "rpc", "rpcdce", "libloaderapi"] }
+comdrive = { git = "https://github.com/Pctg-x8/comdrive" }
