--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ build = "build.rs"
 
 [features]
 with_ferrite = ["ferrite"]
+with_xcb = ["xcb"]
 
 [dependencies]
+univstring = "0.2"
 bitflags = "1.0"
 libc = "0.2"
 ferrite = { git = "https://github.com/Pctg-x8/ferrite", optional = true, features = ["FeImplements", "FePresentation"] }
+xcb = { version = "0.8", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
