add: manual rendering for osx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"rust.features": ["with_xcb", "with_ferrite", "ferrite/VK_KHR_xcb_surface"]
+	// "rust.features": ["with_xcb", "with_ferrite", "ferrite/VK_KHR_xcb_surface"]
+	"rust.features": ["with_ferrite", "ferrite/VK_MVK_macos_surface", "manual_rendering"]	
 }
